# Copyright(c) 2022 wtcat
import("//gn/toolchain/rtems/rtems.gni")

component("component") {
    sources = [
        "xmodem.c",
        "timer_ii.c",
        "workqueue.c",
        "crc.c"
    ]
    if (use_fntrace) {
        sources += ["callpath.c"]
    }
    if (use_fnstack_check) {
        sources += ["compiler_stack_protect.c"]
    }
}