# Copyright(c) 2022 wtcat
import("//gn/toolchain/rtems/rtems.gni")

component("component") {
    sources = [
        "timer_ii.c",
        "workqueue.c",
        "crc.c",
        "ring_buffer.c",
        "plog.c"
    ]
    if (use_fntrace) {
        sources += ["callpath.c"]
    }
    if (use_fnstack_check) {
        sources += ["compiler_stack_protect.c"]
    }

    deps = [
        "//embeded/rtems/component/lib",
        "//embeded/rtems/component/utils"
    ]
}