# Unit Test

component("testsuite") {
    include_dirs = [
        "//embeded/thirdparty/googletest/include",
        "//embeded/thirdparty/googletest"
    ]
    sources = [
        "//embeded/thirdparty/googletest/src/gtest-all.cc",
        "test_main.cc",
        "workqueue_unit_test.cc",
        "timlib_unit_test.cc"
    ]
}