# Unit Test
import("//gn/toolchain/rtems/rtems.gni")

component("testsuite") {
    defines = []
    configs = []
    sources = [
        # "workqueue_unit_test.cc",
        # "timlib_unit_test.cc",
        # "tpic2810_unit_test.cc"
    ]
    if (use_fntrace) {
        defines += ["CONFIGURE_FNTRACE"]
    }
    configs += ["//embeded/thirdparty/googletest:gtest_config"]
}