# Copyright 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//gn/toolchain/gcc_toolchain.gni")

gcc_toolchain("x86") {
  cc = "gcc"
  cxx = "g++"
  ar = "ar"
  ld = cxx

  toolchain_args = {
    current_cpu = "x86"
    current_os = "linux"
  }
}

gcc_toolchain("x64") {
  cc = "gcc"
  cxx = "g++"
  ar = "ar"
  ld = cxx

  enable_linker_map = true
  executable_extension = ".elf"
  toolchain_args = {
    current_cpu = "x64"
    current_os = "linux"
  }
}

