# Copyright 2013 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//gn/toolchain/gcc_toolchain.gni")

gcc_toolchain("linux") {
  cc = "gcc"
  cxx = "g++"
  ar = "ar"
  ld = cxx

  enable_linker_map = false
  executable_extension = ".elf"
  toolchain_args = {
    current_cpu = target_cpu
    current_os = target_os
  }
}

