#rtems module
declare_args() {
  use_net = false
  
  #Libbsd
  use_libbsd = false

  #Debugger
  use_debugger = false

  #Bsp stack allocator
  use_stack_allocator = true

  #Enable sysinit_verbose
  use_verbose = false
  
  #Enable device tree
  use_devicetree = false

  #Media service
  use_media = false

  use_rtl = false

  use_backtrace = false
}

# BSD-Net
if (use_libbsd) {
  declare_args() {
    use_bsdnet_ftpd = true
    use_bsdnet_telnet = true
  }
}

declare_args() {
  target_board = ""
  target_version = 5
  rtems_package_path = ""
}
