#rtems module
declare_args() {
  use_net = false
  
  #Libbsd
  use_libbsd = false

  #Enable sysinit_verbose
  use_verbose = false
  
  #Enable device tree
  use_devicetree = false

  #Media service
  use_media = false

  #Enable dynamic loader
  use_rtl = false

  #Enable shell
  use_shell = true

  #Enable backtrace
  use_backtrace = false

  #Function trace
  use_fntrace = false

  #Function call stack check
  use_fnstack_check = false
}

if (use_backtrace) {
  declare_args() {
    #Unwind backtrace
    use_backtrace_unwind = true
  }
}

if (use_devicetree) {
  declare_args() {
    #Build devices by device tree (if true)
    #Build devices by resources definition (if false)
    use_ofw_bus = true
  }
}

# BSD-Net
if (use_libbsd) {
  declare_args() {
    use_bsdnet_ftpd = true
    use_bsdnet_telnet = true
    #Debugger
    use_gdbserver = false
  }
}

declare_args() {
  target_version = 5
}
