# LVGL
import("//gn/toolchain/rtems/rtems.gni")

component("lvgl") {
    component_type == "static_library"
    configs = []
    sources = [
        "//embeded/thirdparty/lvgl/src/widgets/animimg/lv_animimg.c",
        "//embeded/thirdparty/lvgl/src/widgets/colorwheel/lv_colorwheel.c",
        "//embeded/thirdparty/lvgl/src/widgets/calendar/lv_calendar_header_arrow.c",
        "//embeded/thirdparty/lvgl/src/widgets/calendar/lv_calendar.c",
        "//embeded/thirdparty/lvgl/src/widgets/calendar/lv_calendar_header_dropdown.c",
        "//embeded/thirdparty/lvgl/src/widgets/menu/lv_menu.c",
        "//embeded/thirdparty/lvgl/src/widgets/msgbox/lv_msgbox.c",
        "//embeded/thirdparty/lvgl/src/widgets/bar/lv_bar.c",
        "//embeded/thirdparty/lvgl/src/widgets/label/lv_label.c",
        "//embeded/thirdparty/lvgl/src/widgets/arc/lv_arc.c",
        "//embeded/thirdparty/lvgl/src/widgets/checkbox/lv_checkbox.c",
        "//embeded/thirdparty/lvgl/src/widgets/objx_templ/lv_objx_templ.c",
        "//embeded/thirdparty/lvgl/src/widgets/textarea/lv_textarea.c",
        "//embeded/thirdparty/lvgl/src/widgets/roller/lv_roller.c",
        "//embeded/thirdparty/lvgl/src/widgets/slider/lv_slider.c",
        "//embeded/thirdparty/lvgl/src/widgets/btn/lv_btn.c",
        "//embeded/thirdparty/lvgl/src/widgets/span/lv_span.c",
        "//embeded/thirdparty/lvgl/src/widgets/spinbox/lv_spinbox.c",
        "//embeded/thirdparty/lvgl/src/widgets/line/lv_line.c",
        "//embeded/thirdparty/lvgl/src/widgets/win/lv_win.c",
        "//embeded/thirdparty/lvgl/src/widgets/canvas/lv_canvas.c",
        "//embeded/thirdparty/lvgl/src/widgets/led/lv_led.c",
        "//embeded/thirdparty/lvgl/src/widgets/keyboard/lv_keyboard.c",
        "//embeded/thirdparty/lvgl/src/widgets/spinner/lv_spinner.c",
        "//embeded/thirdparty/lvgl/src/widgets/meter/lv_meter.c",
        "//embeded/thirdparty/lvgl/src/widgets/imgbtn/lv_imgbtn.c",
        "//embeded/thirdparty/lvgl/src/widgets/btnmatrix/lv_btnmatrix.c",
        "//embeded/thirdparty/lvgl/src/widgets/chart/lv_chart.c",
        "//embeded/thirdparty/lvgl/src/widgets/list/lv_list.c",
        "//embeded/thirdparty/lvgl/src/widgets/img/lv_img.c",
        "//embeded/thirdparty/lvgl/src/widgets/tabview/lv_tabview.c",
        "//embeded/thirdparty/lvgl/src/widgets/dropdown/lv_dropdown.c",
        "//embeded/thirdparty/lvgl/src/widgets/table/lv_table.c",
        "//embeded/thirdparty/lvgl/src/widgets/switch/lv_switch.c",
        "//embeded/thirdparty/lvgl/src/widgets/tileview/lv_tileview.c",
        "//embeded/thirdparty/lvgl/src/libs/gif/lv_gif.c",
        "//embeded/thirdparty/lvgl/src/libs/gif/gifdec.c",
        "//embeded/thirdparty/lvgl/src/libs/bmp/lv_bmp.c",
        "//embeded/thirdparty/lvgl/src/libs/sjpg/lv_sjpg.c",
        "//embeded/thirdparty/lvgl/src/libs/sjpg/tjpgd.c",
        "//embeded/thirdparty/lvgl/src/libs/ffmpeg/lv_ffmpeg.c",
        "//embeded/thirdparty/lvgl/src/libs/rlottie/lv_rlottie.c",
        "//embeded/thirdparty/lvgl/src/libs/png/lv_png.c",
        "//embeded/thirdparty/lvgl/src/libs/png/lodepng.c",
        "//embeded/thirdparty/lvgl/src/libs/freetype/lv_freetype.c",
        "//embeded/thirdparty/lvgl/src/libs/qrcode/qrcodegen.c",
        "//embeded/thirdparty/lvgl/src/libs/qrcode/lv_qrcode.c",
        "//embeded/thirdparty/lvgl/src/libs/fsdrv/lv_fs_stdio.c",
        "//embeded/thirdparty/lvgl/src/libs/fsdrv/lv_fs_posix.c",
        "//embeded/thirdparty/lvgl/src/libs/fsdrv/lv_fs_fatfs.c",
        "//embeded/thirdparty/lvgl/src/libs/fsdrv/lv_fs_win32.c",
        "//embeded/thirdparty/lvgl/src/layouts/flex/lv_flex.c",
        "//embeded/thirdparty/lvgl/src/layouts/grid/lv_grid.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_dejavu_16_persian_hebrew.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_10.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_unscii_8.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_32.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_44.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_loader.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_40.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_12.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_unscii_16.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_46.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_fmt_txt.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_34.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_14.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_24.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_16.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_20.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_22.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_simsun_16_cjk.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_42.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_28_compressed.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_12_subpx.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_38.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_48.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_18.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_28.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_26.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_30.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_8.c",
        "//embeded/thirdparty/lvgl/src/font/lv_font_montserrat_36.c",
        "//embeded/thirdparty/lvgl/src/others/imgfont/lv_imgfont.c",
        "//embeded/thirdparty/lvgl/src/others/snapshot/lv_snapshot.c",
        "//embeded/thirdparty/lvgl/src/others/gridnav/lv_gridnav.c",
        "//embeded/thirdparty/lvgl/src/others/monkey/lv_monkey.c",
        "//embeded/thirdparty/lvgl/src/others/fragment/lv_fragment_manager.c",
        "//embeded/thirdparty/lvgl/src/others/fragment/lv_fragment.c",
        "//embeded/thirdparty/lvgl/src/others/msg/lv_msg.c",
        "//embeded/thirdparty/lvgl/src/others/ime/lv_ime_pinyin.c",
        "//embeded/thirdparty/lvgl/src/others/file_explorer/lv_file_explorer.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_img_decoder.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_arc.c",
        "//embeded/thirdparty/lvgl/src/draw/swm341_dma2d/lv_gpu_swm341_dma2d.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw.c",
        "//embeded/thirdparty/lvgl/src/draw/stm32_dma2d/lv_gpu_stm32_dma2d.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_img_cache.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_transform.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_transform.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_layer.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_arc.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_line.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_rect.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_img.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_polygon.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_dither.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_letter.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_blend.c",
        "//embeded/thirdparty/lvgl/src/draw/sw/lv_draw_sw_gradient.c",
        "//embeded/thirdparty/lvgl/src/draw/arm2d/lv_gpu_arm2d.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_mask.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_layer.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_label.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_img.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_img_buf.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_line.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_bg.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_mask.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_composite.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_rect.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_utils.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_layer.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_arc.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_texture_cache.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_img.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_stack_blur.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_polygon.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_label.c",
        "//embeded/thirdparty/lvgl/src/draw/sdl/lv_draw_sdl_line.c",
        "//embeded/thirdparty/lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp.c",
        "//embeded/thirdparty/lvgl/src/draw/nxp/pxp/lv_draw_pxp_blend.c",
        "//embeded/thirdparty/lvgl/src/draw/nxp/pxp/lv_gpu_nxp_pxp_osa.c",
        "//embeded/thirdparty/lvgl/src/draw/nxp/vglite/lv_draw_vglite_arc.c",
        "//embeded/thirdparty/lvgl/src/draw/nxp/vglite/lv_draw_vglite_blend.c",
        "//embeded/thirdparty/lvgl/src/draw/nxp/vglite/lv_gpu_nxp_vglite.c",
        "//embeded/thirdparty/lvgl/src/draw/nxp/vglite/lv_draw_vglite_rect.c",
        "//embeded/thirdparty/lvgl/src/draw/nxp/lv_gpu_nxp.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_triangle.c",
        "//embeded/thirdparty/lvgl/src/draw/lv_draw_rect.c",
        "//embeded/thirdparty/lvgl/src/hal/lv_hal_tick.c",
        "//embeded/thirdparty/lvgl/src/hal/lv_hal_disp.c",
        "//embeded/thirdparty/lvgl/src/hal/lv_hal_indev.c",
        "//embeded/thirdparty/lvgl/src/core/lv_obj_draw.c",
        "//embeded/thirdparty/lvgl/src/core/lv_disp.c",
        "//embeded/thirdparty/lvgl/src/core/lv_obj_tree.c",
        "//embeded/thirdparty/lvgl/src/core/lv_obj_class.c",
        "//embeded/thirdparty/lvgl/src/core/lv_indev.c",
        "//embeded/thirdparty/lvgl/src/core/lv_obj.c",
        "//embeded/thirdparty/lvgl/src/core/lv_group.c",
        "//embeded/thirdparty/lvgl/src/core/lv_event.c",
        "//embeded/thirdparty/lvgl/src/core/lv_indev_scroll.c",
        "//embeded/thirdparty/lvgl/src/core/lv_theme.c",
        "//embeded/thirdparty/lvgl/src/core/lv_obj_scroll.c",
        "//embeded/thirdparty/lvgl/src/core/lv_obj_pos.c",
        "//embeded/thirdparty/lvgl/src/core/lv_obj_style_gen.c",
        "//embeded/thirdparty/lvgl/src/core/lv_obj_style.c",
        "//embeded/thirdparty/lvgl/src/core/lv_refr.c",
        "//embeded/thirdparty/lvgl/src/themes/mono/lv_theme_mono.c",
        "//embeded/thirdparty/lvgl/src/themes/default/lv_theme_default.c",
        "//embeded/thirdparty/lvgl/src/themes/basic/lv_theme_basic.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_lru.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_txt_ap.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_math.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_anim.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_style_gen.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_timer.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_templ.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_mem.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_style.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_anim_timeline.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_memcpy_builtin.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_ll.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_bidi.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_async.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_malloc_builtin.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_fs.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_printf.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_color.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_gc.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_log.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_utils.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_area.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_txt.c",
        "//embeded/thirdparty/lvgl/src/misc/lv_tlsf.c"
    ]
    configs += [":lvgl_configs"]
}

config("lvgl_configs") {
    include_dirs = [
        "//embeded/thirdparty/lvgl"
    ]
}

