import("//gn/toolchain/rtems/rtems.gni")

component("board") {
  defines = ["CONFIG_AM43XX"]
  include_dirs = [
    "include"
  ]
  deps = []

  sources = [
    "am43xx.c",
    "console.c",
    "gpio.c",
    "gpio_keys.c",
    "timers.c",
    "platform_resource.c"
    # "clock.c",
    # "clock_am43xx.c"
  ]
  if (use_backtrace) {
    defines += ["CONFIGURE_BACKTRACE=1"]
    sources += ["//embeded/rtems/bsps/arm/shared/unwind.c"]
  }
  if (use_libbsd) {
    deps += ["bsd:bsd_drivers"]
  }
}

