import("//gn/toolchain/rtems/rtems.gni")

component("board") {
  deps = []
  defines = ["CONFIG_AM43XX"]
  include_dirs = [
    "include"
  ]
  sources = [
    "am43xx.c",
    "console.c",
    "gpio.c",
    "gpio_keys.c",
    "timers.c",
    "platform_resource.c"
    # "clock.c",
    # "clock_am43xx.c"
  ]
  deps += ["//embeded/rtems/bsps/arm/shared"]
  if (use_libbsd) {
    deps += ["bsd:bsd_drivers"]
  }
}

