# Set build arguments here. See `gn help buildargs`.
target_os = "rtems"
target_cpu = "arm"
target_version = 6
target_board = "am437x_idk_evm"

compiler_cflags = "-O2"

use_devicetree = true
use_ofw_bus = false
use_bin = true
use_uboot = true
use_rtl = true
use_testsuite = true
uboot_ldaddr = 2148548608
use_libbsd = true
use_gdbserver= true
use_backtrace = true
use_fntrace = true
