import("//gn/toolchain/rtems/rtems.gni")

component("shared") {
    defines = []
    sources = ["fatal.c"]
    if (use_backtrace) {
        defines += ["CONFIGURE_BACKTRACE"]
        if (use_backtrace_unwind) {
            sources += ["unwind.c"]
        } else {
            sources += ["stacktrace.c"]
        }
    }
}