import("//gn/toolchain/rtems/rtems.gni")

component("shared") {
    sources = ["fatal.c"]
    if (use_backtrace) {
        if (use_backtrace_unwind) {
            sources += ["unwind.c"]
        } else {
            sources += ["stacktrace.c"]
        }
    }
    configs = [
        "//gn/config:backtrace"
    ]
}