import("//gn/toolchain/rtems/rtems.gni")

component("board") {
  defines = []
  include_dirs = [
    "include"
  ]
  sources = [
    "stm32_platform.c",
    "stm32_gpio.c",
    "stm32_dma.c",
    "stm32_dma_v1.c"
  ]

  deps = ["//embeded/rtems/bsps/arm/shared"]
  deps += [
    "//embeded/rtems/bsps/arm/shared/hal_stm32:stm32f4"
  ]
  configs = [
    "//embeded/rtems/bsps/arm/shared/hal_stm32:stm32f4_config"
  ]
}

