import("//gn/toolchain/rtems/rtems.gni")

component("board") {
  defines = []
  include_dirs = [
    "include"
  ]
  sources = [
    "stm32h7_dtb.S",
    "stm32h7.c",
    "stm32h7_sdram.c",
    "stm32h7_clk.c",
    "stm32h7_com.c",
    "stm32h7_gpio.c",
    "stm32h7_pinctrl.c",
    "stm32h7_dma.c",
    "stm32h7_dma_v1.c",
    "stm32h7_dmamux.c",
    "stm32h7_uart.c"
  ]

  deps =  ["//embeded/rtems/bsps/arm/shared"]
  deps += [
    "//embeded/rtems/bsps/arm/shared/hal_stm32:stm32h7"
  ]
  configs = [
    "//embeded/rtems/bsps/arm/shared/hal_stm32:stm32h7_config",
  ]
}

