import("//gn/toolchain/rtems/rtems.gni")

component("board") {
  deps = []
  include_dirs = [
    "include"
  ]
  sources = [
    "stm32h7_dtb.S",
    "stm32h7.c",
    "stm32h7_sdram.c",
    "stm32h7_clk.c",
    "stm32h7_com.c",
    "stm32h7_gpio.c",
    "stm32h7_pinctrl.c",
    "stm32h7_dma.c",
    "stm32h7_dma_v1.c",
    "stm32h7_dmamux.c",
    "stm32h7_uart.c",
    "stm32h7_spi.c",
    "stm32h7_leds.c",
    
    "flash_w25q128.c"
  ]
  sources += [
    "stm32_queue.c"
  ]
  if (use_libbsd) {
    sources += [
      "bsd/stm32h7_sdmmc.c",
      "bsd/keys.c"
    ]
  } else {
    sources += [
      "stm32h7_sdmmc.c",
      "gpio-keys.c",
    ]
    deps += [
      "//embeded/rtems/bsps/shared/mmc"
    ]
  }

  deps += [
    "//embeded/rtems/bsps/arm/shared",
    "//embeded/rtems/bsps/arm/shared/hal_stm32:stm32h7",
    "//embeded/rtems/bsps/arm/shared/cortexm:cortexm_shared",
    
  ]
  configs = [
    "//embeded/rtems/bsps/arm/shared/hal_stm32:stm32h7_config"
  ]
}

